Closing case DIVD-2021-00004
Closing this case as all notifications have been sent.

--- a/csirt.divd.nl/cases/DIVD-2021-00004.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00004.md
@@ -7,7 +7,7 @@ author: Lennaert Oudshoorn / Célistine Oosting
 lead: Lennaert Oudshoorn
 redirect_from:
   - /DIVD-2021-00004/
-status : Open
+status : Closed
 excerpt: "
 	DIVD heeft een lijst van bij phishing buitgemaakte en daarna gelekte emailadressen en wachtwoorden van een security researcher ontvangen. /
 	DIVD has received a list of credentials obtained through phishing from a security researcher.
@@ -63,6 +63,8 @@ Wij gaan, in de komende dagen,  aan ieder van de email adressen op de lijst een 
 | 09-04-2021 | Onderzoeker doet melding en levert gegevens aan bij DIVD |
 | 07-05-2021 | DIVD start case en verwerkt de gegevens |
 | 09-05-2021 | Eerste emails verstuurd |
+| 10-05-2021 | Alle notificaties zijn verstuurd |
+| 10-05-2021 | Case gesloten |
 
 <hr>
 
@@ -98,3 +100,5 @@ We have received the list of email addresses and passwords. Each email address o
 | 09-04-2021 | Researcher reports the campaign and data to DIVD |
 | 07-05-2021 | DIVD starts a case and processes the data |
 | 09-05-2021 | First notifications sent |
+| 10-05-2021 | All notifications have been sent |
+| 10-05-2021 | Case closed |
