Changed to researcher on all older cases (from reseacher)

--- a/csirt.divd.nl/cases/DIVD-2020-00001.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00001.md
@@ -11,7 +11,7 @@ excerpt: "
 	Onze status omtrend CVE-2019-19781 / 
 	Our current status around CVE-2019-19781
 "
-reseachers:
+researchers:
 - 
 cves:
 - CVE-2019-19781
