--- a/csirt.divd.nl/cases/DIVD-2020-00002.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00002.md
@@ -11,7 +11,7 @@ excerpt: "
 	Op ruim 450 kwetsbare Citrix ADC systemen hebben wij wildcard certificaten aangetroffen / 
 	We have found over 450 vulnerable Citrix ADC that used wildcard certificates
 "
-reseachers:
+researchers:
 -
 cves:
 - 
