--- a/csirt.divd.nl/cases/DIVD-2020-00003.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00003.md
@@ -11,7 +11,7 @@ excerpt: "
 	16.000 kwetsbare Microsoft RDP Gateway systemen online / 
 	16.000 vulnerable Microsoft RDP Gateway systemen online
 "
-reseachers:
+researchers:
 -
 cves:
 - CVE-2020-0609
