--- a/csirt.divd.nl/cases/DIVD-2020-00004.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00004.md
@@ -11,7 +11,7 @@ excerpt: "
 	Een lijst met ruim 500k+ botnet slachtoffers is gepubliceerd / 
 	A list of Mirai botnet victims has been published exposing a total of 500K+ systems 
 "
-reseachers:
+researchers:
 -
 cves:
 - n/a
