--- a/csirt.divd.nl/cases/DIVD-2020-00005.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00005.md
@@ -12,7 +12,7 @@ excerpt: "
 	773 Nederlandse IP adressen kwetsbaar voor Ghostcat - Apache Tomcat AJP File Read/Inclusion Vulnerability / 
 	773 Dutch IP addresses vulnerable to Ghostcat - Apache Tomcat AJP File Read / Inclusion Vulnerability 
 "
-reseachers:
+researchers:
 -
 cves:
 - CVE-2020-1938
