--- a/csirt.divd.nl/cases/DIVD-2020-00006.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00006.md
@@ -12,7 +12,7 @@ excerpt: "
 	Security Meldpunt vraagt uw aandacht voor een SMBv3 kwetsbaarheid en gaat netwerkbeheerders met publiek beschikbare SMBv3 servers met compressie waarschuwen / 
 	The Security hotline is asking your attention for a vulnerabilty in SMBv3 and is going to warn network operators of Dutch IPs that respond to SMBv3 handshakes and have encryption enabled
 "
--reseachers:
+-researchers:
 -
 cves:
 - CVE-2020-0796
