--- a/csirt.divd.nl/cases/DIVD-2020-00007.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00007.md
@@ -12,7 +12,7 @@ excerpt: "
 	Er is een kwetsbaarheid gevonden in Citrix ShareFile deze kwetsbaarheid kan gebruikt worden door een aanvaller om toegang te verkrijgen tot gevoelige data. / 
 	A vulnerabilty in Citrix ShareFile has been discovered, this vulnerability can be used by an attacker to potentially gain access to sensitive data.
 "
-reseachers:
+researchers:
 - Lennaert Oudshoorn
 cves:
 - CVE-2020-7473
