--- a/csirt.divd.nl/cases/DIVD-2020-00008.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00008.md
@@ -12,7 +12,7 @@ excerpt: "
 	Onderzoekers van het DIVD hebben 313 000 Wordpress sites met .NL domein gescanned, meldingen voor kwetsbare sites worden gedaan naarmate de resultaten verwerkt worden. /
 	DIVD researchers scanned 313 000 Wordpress websites with .NL domains, vulnerability notifications are being sent as results are processed.
 "
-reseachers:
+researchers:
 - Victor Gevers
 - Lennaert Oudshoorn
 cves:
