--- a/csirt.divd.nl/cases/DIVD-2020-00009.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00009.md
@@ -12,7 +12,7 @@ excerpt: "
 	Een datadump met informatie over meer dan 900 gecompromitteerde Pulse Secure VPN enterprise servers is publiek gemaakt. / 
 	A data dump with information of over 900 compromised Pulse Secure VPN enterprise servers has been released.
 "
-reseachers:
+researchers:
 -
 cves:
 - n/a
