--- a/csirt.divd.nl/cases/DIVD-2020-00010.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00010.md
@@ -12,7 +12,7 @@ excerpt: "
 	In de WordPress Plugin wpDiscuz zit een kritieke kwetsbaarheid die aanvalles in staat stelt een systemen over te nemen / 
 	Wordpress plugin wpDiscuz has a critical vulnerability that allows an attacker to take over the system.
 "
-reseachers:
+researchers:
 -
 cves:
 - CVE-2020-24186
