--- a/csirt.divd.nl/cases/DIVD-2020-00012.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00012.md
@@ -12,7 +12,7 @@ excerpt: "
 	Er is een lijst online aangetroffen met 49 577 kwetsbare Fortinet VPN devices waarvan login credentials gestolen kunnen worden / 
 	A list was found online, with 49 577 vulnerable Fortinet VPN devices, potentially login credentials could be exposed
 "
-reseachers:
+researchers:
 - 
 cves:
 - CVE-2018-13379
