--- a/csirt.divd.nl/cases/DIVD-2020-00013.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00013.md
@@ -12,7 +12,7 @@ excerpt: "
 	DIVD heeft een lijst van bij phishing buitgemaakte en daarna gelekte email en wachtwoorden van een partner ontvangen / 
 	DIVD has received a list of credentials obtained through phishing from a partner.
 "
-reseachers:
+researchers:
 -
 cves:
 - n/a
