--- a/csirt.divd.nl/cases/DIVD-2021-00001.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00001.md
@@ -13,7 +13,7 @@ excerpt: "
 redirect_from:
   - /DIVD-2021-00001/
 status : Open
-reseachers:
+researchers:
 - Matthijs Koot
 - Victor Gevers
 - Lennaert Oudshoorn
