--- a/csirt.divd.nl/cases/DIVD-2020-00011.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00011.md
@@ -22,20 +22,176 @@ cves:
 - CVE-2021-26472
 - CVE-2021-26473
 - CVE-2021-26474
-product: "
-	Vembu DBR
-"
-versions: 			4.2.0 update 1 and sooner
-patch_status:	 	Available
+product: 
+  - 360DR
+  - BackSpace
+  - BackupService
+  - BackupSolution
+  - BaltnetaOnlineBackup
+  - ClearPointBackup
+  - CloudBackup
+  - CloudBasedBackup
+  - CloudStor
+  - CloudStore
+  - CtrlSDataAssurance
+  - DataAddicts
+  - DataBackup
+  - DataCrib
+  - DataVault
+  - DBS
+  - EclipseBaaS
+  - EnklareBackup
+  - FastBackup
+  - Guardian
+  - HotlinkBackup
+  - IronVault
+  - iwksbackup
+  - Level365OnlineBackup
+  - LocalTel_RDS
+  - MBCBackup
+  - Netbackup
+  - NetrepidHostedBackups
+  - OffsiteVAULT
+  - OnlineBackup_Client
+  - OnyxSync
+  - Opusbackup
+  - P2VOnlineBackup
+  - ProdigyBackup
+  - QloudwiseBackup
+  - RAKVault
+  - ReflexBackups
+  - RemoteDataRecovery
+  - saf-gate
+  - SamcoStor
+  - SM4Store
+  - StoreGrid
+  - StoreSafeDC
+  - StorNet
+  - STPOffsite
+  - Syntax
+  - TBITBackup
+  - TechNetBackup
+  - TheDataVault
+  - TitanBackup
+  - TruStor
+  - UndergroundBackups
+  - VELOCIsecure
+  - VembuBDR
+  - VembuOffsiteDR
+  - WrightOnline
+  - XpressSTOR
+  - ZipData
+  - Other products or versions of products in this family may be affected too.
+versions:
+  - 360DR v4.4.0.0
+  - BackSpace v4.5.0
+  - BackupService v5.2.0
+  - BackupSolution v4.4.0.0
+  - BaltnetaOnlineBackup v4.1.0
+  - ClearPointBackup v4.4.0.0
+  - CloudBackup v4.4.0.0
+  - CloudBasedBackup v4.4.0
+  - CloudStor v4.4.0.0
+  - CloudStore v4.4.0.0
+  - CtrlSDataAssurance v4.5.0
+  - CtrlSDataAssurance v4.4.2
+  - CtrlSDataAssurance v4.4.0.0
+  - CtrlSDataAssurance v4.4.0
+  - CtrlSDataAssurance v4.2.0.0
+  - CtrlSDataAssurance v4.2.0
+  - CtrlSDataAssurance v3.5.0.0
+  - DataAddicts v4.4.0.0
+  - DataBackup v4.3.0
+  - DataCrib v5.2.0
+  - DataVault v5.1.0
+  - DBS v4.4.0.0
+  - EclipseBaaS v4.4.0.0
+  - EnklareBackup v5.1.0
+  - FastBackup v4.4.0.0
+  - Guardian v5.1.0
+  - Guardian v4.4.0.0
+  - Guardian v4.4.0
+  - HotlinkBackup v4.4.0
+  - IronVault v4.4.0.0
+  - iwksbackup v5.0.0
+  - Level365OnlineBackup v4.4.0.0
+  - LocalTel_RDS v4.4.0.0
+  - MBCBackup v4.4.0.0
+  - Netbackup v5.2.0
+  - NetrepidHostedBackups v4.4.1
+  - OffsiteVAULT v4.4.0.0
+  - OnlineBackup_Client v5.1.0
+  - OnlineBackup_Client v4.4.0.0
+  - OnlineBackup_Client v4.4.0
+  - OnyxSync v4.4.0.0
+  - Opusbackup v4.4.0.0
+  - P2VOnlineBackup v4.4.0.0
+  - ProdigyBackup v4.4.0.0
+  - QloudwiseBackup v4.4.2
+  - RAKVault v4.4.0.0
+  - ReflexBackups v4.4.0.0
+  - RemoteDataRecovery v5.1.0
+  - saf-gate v4.4.0.0
+  - SamcoStor v5.0.0
+  - SM4Store v4.4.0.0
+  - StoreGrid v5.2.0
+  - StoreGrid v5.1.0
+  - Storegrid v5.1.0
+  - StoreGrid v5.0.0
+  - StoreGrid v4.5.0
+  - StoreGrid v4.4.1.0
+  - StoreGrid v4.4.1
+  - StoreGrid v4.4.0.0
+  - StoreGrid v4.4.0
+  - StoreGrid v4.2.1.0
+  - StoreGrid v4.2.1
+  - StoreGrid v4.0.0.0
+  - StoreGrid v3.5.0.0
+  - StoreGrid v3.1.0.0
+  - StoreSafeDC v4.4.0.0
+  - StorNet v5.0.0
+  - StorNet v4.4.0
+  - STPOffsite v4.4.0.0
+  - Syntax v4.4.0.0
+  - TBITBackup v5.1.0
+  - TechNetBackup v4.4.0.0
+  - TheDataVault v4.5.0
+  - TitanBackup v5.2.0
+  - TitanBackup v5.1.0
+  - TruStor v4.4.0.0
+  - TruStor v3.5.0.0
+  - UndergroundBackups v4.4.0.0
+  - VELOCIsecure v4.4.0.0
+  - VembuBDR v6.1.0.0
+  - VembuBDR v4.2.0.1
+  - VembuBDR v4.2.0
+  - VembuBDR v4.1.0
+  - VembuBDR v4.0.2
+  - VembuBDR v4.0.1
+  - VembuBDR v4.0.0
+  - VembuBDR v3.9.1 Update1
+  - VembuBDR v3.9.0 Update1
+  - VembuBDR v3.9.0
+  - VembuBDR v3.8.0
+  - VembuBDR v3.7.0
+  - VembuBDR v3.5.0.0
+  - VembuOffsiteDR v4.2.0.1
+  - VembuOffsiteDR v4.2.0
+  - WrightOnline v4.4.0.0
+  - XpressSTOR v4.4.0.0
+  - ZipData v4.4.0.0
+  - Other products or versions of products in this family may be affected too.
+patch_status:	 	Some pataches available
 recommendation: "
 	Update Vembu DBR to at least 4.2.0 update 2 and limit it's exposure (don't expose to public internet)
+	For other products we have not been informed of the availability of patches, it is highly recommended to not expose these products to public internet.
 "
 -workaround:		
 ---
 
 ## Samenvatting
 
-DIVD Onderzoeker [Wietse Boonstra](https://www.divd.nl/team/Wietse%20Boonstra/) heeft vier ernstige kwetsbaarheden in  [Vembu BDR Suite](https://www.vembu.com/vembu-bdr-suite/) ontdekt.
+DIVD Onderzoeker [Wietse Boonstra](https://www.divd.nl/team/Wietse%20Boonstra/) heeft vier ernstige kwetsbaarheden in [Vembu BDR Suite](https://www.vembu.com/vembu-bdr-suite/) ontdekt.
 
 Deze vier kwetsbaarheden zijn:
 * [Unauthenticated remote command execution (CVE-2021-26471)](/CVE-2021-26471/) met CVSS base score of 9.8
@@ -46,6 +202,8 @@ Deze vier kwetsbaarheden zijn:
 Via een of meer van deze kwetsbaarheden is het voor een aanvaller mogelijk een kewetbaar Vembu BDR systeem over te nemen en toegang te krijgen tot data die via Vembu BDR wordt gebackuped.
 
 De wolledige details van deze kwetsbaarheden zijn eerder overgedragen aan Vembu die deze kwetsbaarheden in Vembu BDR 4.2.0 update 2 hebben verholpen. Op 1 juni zijn we van plan de volledige details van deze CVEs vrij te geven.
+
+De Server Side Request Forgecy ({% cve CVE-2021-26474 %}) komt ook voor in veel andere producten van Vembu.
 
 ## Wat kunt u doen?
 
@@ -101,6 +259,8 @@ These four vulnerabilities are:
 An attacker could, by using one or more of these vulnerabilities completely take over a vulnerable Vembu BDR system they have access to and gain access to the data that is back up using Vembu BDR. 
 
 The full details of these vulnerabilities have been previously disclosed to Vembu and have been addressed in Vembu DBR version 4.2.0 update 2. We plan to do a full disclosure of these vulnerabilities on 1 June.
+
+The Server Side Request Forgecy ({% cve CVE-2021-26474 %}) is also present in lots of other Vembu products.
 
 
 ## What you can do
