--- a/csirt.divd.nl/cases/DIVD-2020-00011.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00011.md
@@ -181,7 +181,7 @@ versions:
   - XpressSTOR v4.4.0.0
   - ZipData v4.4.0.0
   - Other products or versions of products in this family may be affected too.
-patch_status:	 	Some pataches available
+patch_status:	 	Some patches available
 recommendation: "
 	Update Vembu DBR to at least 4.2.0 update 2 and limit it's exposure (don't expose to public internet)
 	For other products we have not been informed of the availability of patches, it is highly recommended to not expose these products to public internet.
