--- a/csirt.divd.nl/cases/DIVD-2020-00005.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00005.md
@@ -1,16 +1,16 @@
 ---
 layout: case
-title: DIVD-2020-00005 - Apache Tomcat AJP File Read/Inclusion Vulnerability 
+title: DIVD-2020-00005 - Apache Tomcat AJP File Read/Inclusion Vulnerability
 divd: DIVD-2020-00005
 short: Apache Tomcat AJP File Read/Inclusion Vulnerability
 author: Jeroen van de Weerd
 lead: Frank Breedijk
 redirect_from:
   - /DIVD-2020-00005/
-status : Open
+status : Closed
 excerpt: "
-	773 Nederlandse IP adressen kwetsbaar voor Ghostcat - Apache Tomcat AJP File Read/Inclusion Vulnerability / 
-	773 Dutch IP addresses vulnerable to Ghostcat - Apache Tomcat AJP File Read / Inclusion Vulnerability 
+	773 Nederlandse IP adressen kwetsbaar voor Ghostcat - Apache Tomcat AJP File Read/Inclusion Vulnerability /
+	773 Dutch IP addresses vulnerable to Ghostcat - Apache Tomcat AJP File Read / Inclusion Vulnerability
 "
 researchers:
 -
@@ -45,7 +45,7 @@ Gedetaileerde informatie is beschikbaar op de volgende web pagina's:
 
 ## Wat doen wij?
 
-Wij gaan de lijst met Nederlandse systemen nader onderzoeken en de eigenaren van de IP adressen van deze systemen op de hoogte brengen van de kwetsbaarheid. 
+Wij gaan de lijst met Nederlandse systemen nader onderzoeken en de eigenaren van de IP adressen van deze systemen op de hoogte brengen van de kwetsbaarheid.
 
 ## Timeline
 
@@ -83,7 +83,7 @@ More detailed information is available on the following pages\:
 
 ## What we are doing
 
-We will further investigate the list of the Dutch systems and where necessary, inform the owners of the IP addresses of these systems about the vulnerability. 
+We will further investigate the list of the Dutch systems and where necessary, inform the owners of the IP addresses of these systems about the vulnerability.
 
 ## Timeline
 
