--- a/csirt.divd.nl/cases/DIVD-2020-00007.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00007.md
@@ -7,9 +7,9 @@ author: Lennaert Oudshoorn
 lead: Lennaert Oudshoorn
 redirect_from:
   - /DIVD-2020-00007/
-status : Open
+status : Closed
 excerpt: "
-	Er is een kwetsbaarheid gevonden in Citrix ShareFile deze kwetsbaarheid kan gebruikt worden door een aanvaller om toegang te verkrijgen tot gevoelige data. / 
+	Er is een kwetsbaarheid gevonden in Citrix ShareFile deze kwetsbaarheid kan gebruikt worden door een aanvaller om toegang te verkrijgen tot gevoelige data. /
 	A vulnerabilty in Citrix ShareFile has been discovered, this vulnerability can be used by an attacker to potentially gain access to sensitive data.
 "
 researchers:
@@ -30,11 +30,11 @@ patch_status:	 	Available
 
 ## Samenvatting
 
-Er zijn meerdere kwetsbaarheden gevonden in Citrix ShareFile, software die bedrijven instaat stelt om tussen medewerkers gevoelige documenten veilig te delen. De nieuw gevonden kwetsbaarheden zijn van toepassing op Citrix ShareFile storage zone controllers die klanten in eigen beheer hebben. Deze kwetsbaarheden zouden een aanvaller in staat kunnen stellen om toegang te verkrijgen tot gevoelige data. Er is een mitigatie vanuit Citrix beschikbaar, enkel het updaten van ShareFile naar een niet kwetsbare versie verhelpt de kwetsbaarheid in eerder aangemaakte storage zones niet. 
+Er zijn meerdere kwetsbaarheden gevonden in Citrix ShareFile, software die bedrijven instaat stelt om tussen medewerkers gevoelige documenten veilig te delen. De nieuw gevonden kwetsbaarheden zijn van toepassing op Citrix ShareFile storage zone controllers die klanten in eigen beheer hebben. Deze kwetsbaarheden zouden een aanvaller in staat kunnen stellen om toegang te verkrijgen tot gevoelige data. Er is een mitigatie vanuit Citrix beschikbaar, enkel het updaten van ShareFile naar een niet kwetsbare versie verhelpt de kwetsbaarheid in eerder aangemaakte storage zones niet.
 
 ## Wat kun u doen?
 
-Update uw Citrix ShareFile installatie en volg de instructies van Citrix in het artikel op [https://support.citrix.com/article/CTX269341](https://support.citrix.com/article/CTX269341) (Login vereist). In dit artikel vindt u een powershell script en instructies hoe u dit kunt gebruiken om de kwetsbaarheid te mitigeren. Deze tool dient eerst gebruikt te worden op de primaire storage zone controller en hierna op eventuele secundaire. Na het gebruiken van dit script moeten veranderingen aan de primaire zone niet worden teruggedraaid, dit zal als gevolg hebben dat de zone niet langer beschikbaar is. 
+Update uw Citrix ShareFile installatie en volg de instructies van Citrix in het artikel op [https://support.citrix.com/article/CTX269341](https://support.citrix.com/article/CTX269341) (Login vereist). In dit artikel vindt u een powershell script en instructies hoe u dit kunt gebruiken om de kwetsbaarheid te mitigeren. Deze tool dient eerst gebruikt te worden op de primaire storage zone controller en hierna op eventuele secundaire. Na het gebruiken van dit script moeten veranderingen aan de primaire zone niet worden teruggedraaid, dit zal als gevolg hebben dat de zone niet langer beschikbaar is.
 
 **Het is niet genoeg om enkel ShareFile te updaten naar een niet kwetsbare versie, als de zone is aangemaakt op een kwetsbare versie zal deze kwetsbaar blijven. De mitigerende stappen zijn noodzakelijk.**
 
@@ -49,7 +49,7 @@ Zie: [https://github.com/DimitriNL/CTX-CVE-2020-7473](https://github.com/Dimitri
 
 ## Wat doen wij?
 
-Via [Shodan](https://shodan.io) is er gezocht naar ShareFile servers in Nederland door onderzoekers van de DIVD. Deze systemen zijn vervolgens door hen getest om te zien of zij kwetsbaar zijn. Wij zullen de beheerders van deze systemen benaderen. Indien u als beheerder een mail van ons gekregen hebt hierover is de kwetsbaarheid van uw systeem bevestigd. 
+Via [Shodan](https://shodan.io) is er gezocht naar ShareFile servers in Nederland door onderzoekers van de DIVD. Deze systemen zijn vervolgens door hen getest om te zien of zij kwetsbaar zijn. Wij zullen de beheerders van deze systemen benaderen. Indien u als beheerder een mail van ons gekregen hebt hierover is de kwetsbaarheid van uw systeem bevestigd.
 
 ## Timeline
 
@@ -57,7 +57,7 @@ Via [Shodan](https://shodan.io) is er gezocht naar ShareFile servers in Nederlan
 |:-----:|-------------|
 | 05-05-2020| Citrix informeert klanten via een Security Bulletin. |
 | 22-05-2020| DIVD Onderzoekers scannen de Nederlandse IP range voor achtergebleven kwetsbare systemen.|
-| 26-05-2020 | Case geopened | 
+| 26-05-2020 | Case geopened |
 
 ## Meer informatie
 * [https://thehackernews.com/2020/05/citrix-sharefile-vulnerability.html](https://thehackernews.com/2020/05/citrix-sharefile-vulnerability.html)
@@ -69,11 +69,11 @@ Via [Shodan](https://shodan.io) is er gezocht naar ShareFile servers in Nederlan
 ### English
 
 ## Summary
-Multiple vulnerabilities have been found in Citrix ShareFile, software that allows businesses to safely share sensitive information between employees. These newly found vulnerabilities affect customer managed on premises Citrix ShareFile storage zone controllers. These vulnerabilities could allow an attacker to gain access to sensitive data. A mitigating solution from Citrix is available. Merely updating ShareFile to a non-vulnerable version will not remediate the vulnerability. 
+Multiple vulnerabilities have been found in Citrix ShareFile, software that allows businesses to safely share sensitive information between employees. These newly found vulnerabilities affect customer managed on premises Citrix ShareFile storage zone controllers. These vulnerabilities could allow an attacker to gain access to sensitive data. A mitigating solution from Citrix is available. Merely updating ShareFile to a non-vulnerable version will not remediate the vulnerability.
 
 ## What you can do
 
-Update your Citrix ShareFile instance and follow the instructions in the support article on [https://support.citrix.com/article/CTX269341](https://support.citrix.com/article/CTX269341) (Login required). In this article you will find a powershell script and instructions on how to use this to remediate the vulnerability. This tool will need to be ran on your primary storage zones controller first, and then on any secondary controllers. Once this tool has ran on your primary zone you must not revert any changes to it. Doing this will cause the zone to become unavailable. 
+Update your Citrix ShareFile instance and follow the instructions in the support article on [https://support.citrix.com/article/CTX269341](https://support.citrix.com/article/CTX269341) (Login required). In this article you will find a powershell script and instructions on how to use this to remediate the vulnerability. This tool will need to be ran on your primary storage zones controller first, and then on any secondary controllers. Once this tool has ran on your primary zone you must not revert any changes to it. Doing this will cause the zone to become unavailable.
 
 **Upgrading to a non-vulnerable version is not sufficient to remediate. If a zone was created on a vulnerable version, the remediation steps are required.**
 
@@ -97,7 +97,7 @@ Via [Shodan](https://shodan.io) DIVD researchers searched for ShareFile Servers 
 |:-----:|-------------|
 | 05-05-2020| Citrix informed customers via a Security Bulletin. |
 | 22-05-2020| DIVD researchers scanned the Dutch IP range for left-behind vulnerable systems.|
-| 26-05-2020 | Case opened | 
+| 26-05-2020 | Case opened |
 
 ## More information
 * [https://thehackernews.com/2020/05/citrix-sharefile-vulnerability.html](https://thehackernews.com/2020/05/citrix-sharefile-vulnerability.html)
