--- a/csirt.divd.nl/cases/DIVD-2020-00013.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00013.md
@@ -7,9 +7,9 @@ author: Frank Breedijk
 lead: Frank Breedijk
 redirect_from:
   - /DIVD-2020-00013/
-status : Open
+status : Closed
 excerpt: "
-	DIVD heeft een lijst van bij phishing buitgemaakte en daarna gelekte email en wachtwoorden van een partner ontvangen / 
+	DIVD heeft een lijst van bij phishing buitgemaakte en daarna gelekte email en wachtwoorden van een partner ontvangen /
 	DIVD has received a list of credentials obtained through phishing from a partner.
 "
 researchers:
@@ -45,11 +45,11 @@ Als je deze pagina bezoekt omdat je een email heeft ontvangen van csirt@divd.nl 
 * Als je deze combinatie ergens gebruikt, wijzig het wachtwoord dan onmiddellijk.
 * Ga na welke gevolgen misbruik van dit wachtwoord tussen eind november en nu kan hebben.
 
-Heeft u vragen of hulp nodig naar aanleiding van deze email, dan kunt u ons via dit email adres bereiken (csirt@divd.nl). 
+Heeft u vragen of hulp nodig naar aanleiding van deze email, dan kunt u ons via dit email adres bereiken (csirt@divd.nl).
 
 ## Wat doen wij?
 
-Wij hebben het Nederlandse deel van de lijst van de onderzoeker ontvangen. Wij gaan, in de komende dagen,  aan ieder van de email adressen op de lijst een mailtje sturen zodat de slachtoffers op de hoogte zijn van het lek. 
+Wij hebben het Nederlandse deel van de lijst van de onderzoeker ontvangen. Wij gaan, in de komende dagen,  aan ieder van de email adressen op de lijst een mailtje sturen zodat de slachtoffers op de hoogte zijn van het lek.
 
 
 ## Timeline
@@ -103,4 +103,3 @@ We have received the list of email addresses and passwords. Each email address o
 ## More information
 * [https://twitter.com/ffforward/status/1331960948245008388]
 * [https://twitter.com/ffforward/status/1332073057058508800]
-
