Forgot to update the case as well

--- a/csirt.divd.nl/cases/DIVD-2021-00001.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00001.md
@@ -12,7 +12,7 @@ excerpt: "
 "
 redirect_from:
   - /DIVD-2021-00001/
-status : Open
+status : Closed
 researchers:
 - Matthijs Koot
 - Victor Gevers
@@ -62,6 +62,7 @@ Aan de hand van deze scan resultaten zullen wij de beheerders van deze systemen 
 | 07-03-2021 | 42k+ messsages verstuurd via email |
 | 09-03-2021 | Herscan en notificatie van all servers die voorheen ook gescand zijn |
 | 16-03-2021 | Herscan en notificatie van alle servers inclusief script die daadwerkelijk {% cve CVE-2021-26855 %} test |
+| 15-5-2021  | Case gesloten voor CSIRT en overgedragen aan afdeling onderzoek. Zie [blogpost](/2021/05/14/Closing-ProxyLogon-case/)
 
 ## Meer informatie
 * [Microsoft Security Blog](https://www.microsoft.com/security/blog/2021/03/02/hafnium-targeting-exchange-servers/)
@@ -104,6 +105,7 @@ Based on these scan results we try to notify administrators of vulnerable system
 | 07-03-2021 | 42k+ messsages sent via email |
 | 09-03-2021 | Rescan and notifications of all previously scanned servers |
 | 16-03-2021 | Rescan and notifications of all previously scanned servers, including a script that actually tests for {% cve CVE-2021-26855 %} |
+| 15-5-2021  | Case closed for DIVD CSIRT. Case has been handed over tot research. See [blogpost](/2021/05/14/Closing-ProxyLogon-case/)
 
 
 ## More information
