--- a/csirt.divd.nl/cases/DIVD-2021-00004.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00004.md
@@ -3,7 +3,9 @@ layout: case
 title: DIVD-2021-00004 - Gelekte phishing gegevens / Leaked phishing credentials
 divd: DIVD-2021-00004
 short: A list of credentials that phishers gained from victims has leaked and has been recovered.
-author: Lennaert Oudshoorn / Célistine Oosting
+author: 
+  - Lennaert Oudshoorn
+  - Célistine Oosting
 lead: Lennaert Oudshoorn
 redirect_from:
   - /DIVD-2021-00004/
