Adding reports divd-2020-00009,00010,00012
Adding reports.

--- a/csirt.divd.nl/cases/DIVD-2020-00010.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00010.md
@@ -9,11 +9,11 @@ redirect_from:
   - /DIVD-2020-00010/
 status : Closed
 excerpt: "
-	In de WordPress Plugin wpDiscuz zit een kritieke kwetsbaarheid die aanvalles in staat stelt een systemen over te nemen / 
+	In de WordPress Plugin wpDiscuz zit een kritieke kwetsbaarheid die aanvalles in staat stelt een systemen over te nemen /
 	Wordpress plugin wpDiscuz has a critical vulnerability that allows an attacker to take over the system.
 "
 researchers:
--
+- Lennaert Oudshoorn
 cves:
 - CVE-2020-24186
 product: 		wpDiscuz WordPress plugin
