--- a/csirt.divd.nl/cases/DIVD-2020-00011.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00011.md
@@ -12,7 +12,7 @@ excerpt: "
 redirect_from:
   - /DIVD-2020-00011/
 status : Open
-reseachers:
+researchers:
 - Wietse Boonstra
 - Frank Breedijk
 - Victor Gevers
