--- a/csirt.divd.nl/cases/DIVD-2021-00012.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00012.md
@@ -61,7 +61,7 @@ De komende dagen sturen wij e-mails om slachtoffers te waarschuwen. Als er meerd
 
 | Date | Description |
 |:-----:|-------------|
-| begin 05-2021 | Vermoedelijke periode dat het notnet actief was. |
+| begin 05-2021 | Vermoedelijke periode dat het botnet actief was. |
 | 20-05-2021 | DIVD Onderzoeker vindt de open database. |
 | 24-05-2021 | Hosting provider genotificeerd over deze database op hun infrastructuur. |
 | 26-05-2021 | Database offline gehaald door de hosting provider. |
