Addressing my own review

--- a/csirt.divd.nl/cases/DIVD-2021-00012.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00012.md
@@ -26,7 +26,7 @@ Change your passwords, check if credentials have been abused, check your compute
 
 ## Samenvatting
 
-Tijdens een onderzoek naar open database servers in Nederland heeft een van onze onderzoekers een database van criminelen met buitgemaakte gebruikersnamen en wachtwoorden aangetroffen. Omdat de database niet beveiligd was, is het ons gelukt alle gestolen data uit de te downloaden zodat wij het slachtoffer kunnen informeren.
+Tijdens een onderzoek naar open database servers in Nederland heeft een van onze onderzoekers een database van criminelen met buitgemaakte gebruikersnamen en wachtwoorden aangetroffen. Omdat de database niet beveiligd was, is het ons gelukt alle gestolen data uit de te downloaden zodat wij de slachtoffers kunnen informeren.
 
 ## Wat kunt u doen?
 
@@ -81,11 +81,11 @@ During an investigation into open database servers in The Netherlands, one of ou
 ### Change your passwords
 The username-password combinations from the list below are no longer safe to use. You should change these passwords on every site you use them. We know that is a lot of work, but criminals often try out username and password combinations on other sites as well; this is known as credential stuffing.
 
-### Check if the password has been abused
+### Check if the passwords have been abused
 Check if the password has been abused between the date they were stolen and now. E.g., for ordering products or services in your name.
 
 ### Check your computer and consider reinstalling it
-These passwords were stolen using a virus or other type of malicious program. Or, to put it more plainly: the computer these passwords were stolen from was hacked. If you still using the same computer as you were on the day the passwords were stolen, we recommend that you get it reinstalled.
+These passwords were stolen using a virus or other type of malicious program. Or, to put it more plainly: the computer these passwords were stolen from was hacked. If you still use the same computer as you were on the day the passwords were stolen, we recommend that you get it reinstalled.
 
 ### Make sure your antivirus is up to date.
 Your data was stolen with a virus or another type of malicious software. Using an up-to-date antivirus program helps to protect you from future threats.
