--- a/csirt.divd.nl/cases/DIVD-2021-00012.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00012.md
@@ -55,6 +55,8 @@ Deze database bevatte miljoenen gebruikersnamen en wachtwoorden. De server is in
 
 We hebben een kopie van de database naar haveibeenpwned.com en scattersecrets.com verstrekt zodat zij ons kunnen helpen met het waarschuwen van slachtoffers.
 
+We hebben een kopie van de database overgedragen aan de Nederlandse politie
+
 De komende dagen sturen wij e-mails om slachtoffers te waarschuwen. Als er meerdere van uw email adressen in de database voorkomen, dan krijgt u meerdere emails.
 
 ## Timeline
@@ -66,6 +68,8 @@ De komende dagen sturen wij e-mails om slachtoffers te waarschuwen. Als er meerd
 | 24-05-2021 | Hosting provider genotificeerd over deze database op hun infrastructuur. |
 | 26-05-2021 | Database offline gehaald door de hosting provider. |
 | 26-05-2021 | Data gedeeld met Scatteredsecrets. |
+| 27-05-2021 | Kopie van de database gedeeld met de Nederlandse politie |
+| 2-6-2021   | DIVD CSIRT stuur notificaties uit naar de slachtoffers |
 
 
 <hr>
@@ -103,7 +107,9 @@ The database we discovered contained millions of username-password combinations.
 
 We have provided a copy of the database to haveibeenpwned.com and scatteredsecrets.com to help us warn other victims. 
 
-We will notify victims in a few days; if multiple of your email addresses have been found in the database, you will get multiple emails.
+We have provided a copy of the database to the Dutch police.
+
+We are notifying the victims via email; if multiple of your email addresses have been found in the database, you will get multiple emails.
 
 ## Timeline
 
@@ -114,3 +120,5 @@ We will notify victims in a few days; if multiple of your email addresses have b
 | 24-05-2021 | Hosting provider notified of this database on their infrastructure. |
 | 26-05-2021 | Database taken offline by hosting provider. |
 | 26-05-2021 | Data shared with Scatteredsecrets. |
+| 27-05-2021 | A copy of the database was shared with the Dutch police |
+| 2-6-2021   | DIVD CSIRT has started to send notification emails to victims |
