--- a/csirt.divd.nl/cases/DIVD-2021-00005.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00005.md
@@ -73,6 +73,7 @@ Het is aannemelijk dat er een (beperkt aantal) PCS-systemen zijn die buiten het 
 | 21-04-2021 | DIVD deelt op verzoek een initiële (ongeëvalueerde) lijst van ~650 Nederland-gelinkte PCS-systemen, waarop de tijdelijke maatregel nog niet actief is, met de Nederlandse CERT-community. |
 | 03-05-2021 | Pulse Secure (Ivanti) maakt nieuwe PCS-versie beschikbaar aan alle PCS-klanten. |
 | 10-05-2021 | DIVD stuurt eerste gerichte notificaties uit over systemen waarop een kwetsbare PCS-versie actief is zonder de tijdelijke maatregel.|
+| 06-06-2021 | Tweede ronde notificaties verstuurd door DIVD CSIRT. |
 
 
 ## Dankwoord
@@ -131,6 +132,7 @@ It is likely that a (limited) number of Netherlands-linked PCS systems were not 
 | 21-04-2021 | At request, DIVD shares an (unevaluated) list of ~650 Netherlands-linked PCS systems that lack the temporary measure with the Dutch CERT community. |
 | 03-05-2021 | Pulse Secure (Ivanti) releases a new version of PCS to all PCS customers. |
 | 10-05-2021 | DIVD sends first notifications about systems that run a PCS system without the workaround present while running a PCS version that is vulnerable according to the vendor’s advisory.|
+| 06-06-2021 | Second round of notifications sent by DIVD CSIRT. |
 
 ## Acknowledgements
 DIVD is very grateful to Fox IT / NCC Group for their assistence in version detection. Withouth their help, DIVD could not have sent out targeted notifications..
