--- a/csirt.divd.nl/cases/DIVD-2021-00010.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00010.md
@@ -57,6 +57,7 @@ DIVD sends notifications about the vCenter vulnerability to system owners, for w
 | 25-05-2021 | VMWare publishes an advisory. |
 | 31-05-2021 | DIVD starts scanning. |
 | 03-06-2021 | Exploit code published online. |
+| 06-06-2021 | Notifications sent by DIVD CSIRT. |
 
 ## References
 [0] https://www.vmware.com/security/advisories/VMSA-2021-0010.html
