Updating this case and a new blogpost

--- a/csirt.divd.nl/cases/DIVD-2021-00002.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00002.md
@@ -52,6 +52,7 @@ We have identified this server by downloading the paths ‘/’, ‘/api/v1.5/cw
 |:-----:|-------------|
 | 02-07-2021 | Kaseya publishes their advisory |
 | 02-07-2021 | DIVD start scanning to identify exposed Kaseya VSA servers |
+| 03-07-2021 | DIVD has sent out notifications to the listed abuse addresses of all exposed Kaseya VSA servers found online |
 
 ## More information
 * [official  advisory](https://helpdesk.kaseya.com/hc/en-gb/articles/4403440684689-Important-Notice-July-2nd-2021) from Kaseya
