fixing cve links

--- a/csirt.divd.nl/cases/DIVD-2021-00011.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00011.md
@@ -42,13 +42,13 @@ Ever since we released the news that we indeed notified Kaseya of a vulnerabilit
 
 ## The vulnerabilities
 We notified Kaseya of the following vulnerabilities:
-* [CVE-2021-30116](https://csirt.divd.nl/CVE-2021-30116) - A credentials leak and business logic flaw, to be included in 9.5.7
-* [CVE-2021-30117](https://csirt.divd.nl/CVE-2021-30117) - An SQL injection vulnerability, resolved in May 8th patch.
-* [CVE-2021-30118](https://csirt.divd.nl/CVE-2021-30118) - A Remote Code Execution vulnerability, resolved in April 10th patch. (v9.5.6)
-* [CVE-2021-30119](https://csirt.divd.nl/CVE-2021-30119) -  A Cross Site Scripting vulnerability, to be included in 9.5.7
-* [CVE-2021-30120](https://csirt.divd.nl/CVE-2021-30120) - 2FA bypass, to be resolved in v9.5.7
-* [CVE-2021-30121](https://csirt.divd.nl/CVE-2021-30121) - A Local File Inclusion vulnerability, resolved in May 8th patch.
-* [CVE-2021-30201](https://csirt.divd.nl/CVE-2021-30201) - A XML External Entity vulnerability, resolved in May 8th patch.
+* [CVE-2021-30116](https://csirt.divd.nl/cves/CVE-2021-30116) - A credentials leak and business logic flaw, to be included in 9.5.7
+* [CVE-2021-30117](https://csirt.divd.nl/cves/CVE-2021-30117) - An SQL injection vulnerability, resolved in May 8th patch.
+* [CVE-2021-30118](https://csirt.divd.nl/cves/CVE-2021-30118) - A Remote Code Execution vulnerability, resolved in April 10th patch. (v9.5.6)
+* [CVE-2021-30119](https://csirt.divd.nl/cves/CVE-2021-30119) -  A Cross Site Scripting vulnerability, to be included in 9.5.7
+* [CVE-2021-30120](https://csirt.divd.nl/cves/CVE-2021-30120) - 2FA bypass, to be resolved in v9.5.7
+* [CVE-2021-30121](https://csirt.divd.nl/cves/CVE-2021-30121) - A Local File Inclusion vulnerability, resolved in May 8th patch.
+* [CVE-2021-30201](https://csirt.divd.nl/cves/CVE-2021-30201) - A XML External Entity vulnerability, resolved in May 8th patch.
 
 ## What you can do
 All on-premises VSA Servers should continue to remain offline until further instructions from Kaseya about when it is safe to restore operations. A patch will be required to be installed prior to restarting the VSA and a set of recommendations on how to increase your security posture.
@@ -67,6 +67,7 @@ We have identified this server by downloading the paths ‘/’, ‘/api/v1.5/cw
 In the past few days we have been working with Kaseya to make sure customers turn off their systems, by tipping them off about customers that still have systems online, and hope to be able to continue to work together to ensure that their patch is installed everywhere.
 
 ## Timeline
+
 | Date | Description |
 |:-------------:|-----|
 | 01 Apr 2021 | Research start |
@@ -76,7 +77,7 @@ In the past few days we have been working with Kaseya to make sure customers tur
 | 10 Apr 2021 | Vendor starts issuing  [patches v9.5.5](https://helpdesk.kaseya.com/hc/en-gb/articles/360019054377-9-5-5-Feature-Release-10-April-2021). Resolving CVE-2021-30118. |
 | 8 May 2021 | Vendor issues another [patch v9.5.6](https://helpdesk.kaseya.com/hc/en-gb/articles/360019966738-9-5-6-Feature-Release-8-May-2021). Resolving CVE-2021-30117, CVE-2021-30121, CVE-2021-30201. |
 | 04 Jun 2021 | DIVD CSIRT hands over a list of identified Kaseya VSA hosts to Kaseya. |
-| 26 Jun 2021 |  [9.5.7 on SaaS](https://helpdesk.kaseya.com/hc/en-gb/articles/4403021283217-9-5-7-Feature-Release-26-June-2021-) 30116 and 30119 |
+| 26 Jun 2021 |  [9.5.7 on SaaS](https://helpdesk.kaseya.com/hc/en-gb/articles/4403021283217-9-5-7-Feature-Release-26-June-2021-) Resolving CVE-2021-30116 and CVE-2021-30119. |
 | 02 Jul 2021 | DIVD responds to the ransomware, by scanning for Kaseya VSA instances reachable via the Internet and sends out notifications to network owners |
 | 07 Jul 2021 | Limited publication (after 3 months). |
 
