--- a/csirt.divd.nl/cases/DIVD-2021-00005.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00005.md
@@ -7,7 +7,7 @@ author: Matthijs Koot
 lead: Matthijs Koot
 redirect_from:
   - /DIVD-2021-00005/
-status : Open
+status : Closed
 excerpt: Er zijn kritieke kwetsbaarheden gevonden in Pulse Secure Connect versies >=9.0R3 en <9.1R11.4. / Critical vulnerabilities have been found in Pulse Secure Connect versions >=9.0R3 and <9.1R11.4.
 researchers:
 - Matthijs Koot
@@ -74,7 +74,9 @@ Het is aannemelijk dat er een (beperkt aantal) PCS-systemen zijn die buiten het 
 | 03-05-2021 | Pulse Secure (Ivanti) maakt nieuwe PCS-versie beschikbaar aan alle PCS-klanten. |
 | 10-05-2021 | DIVD stuurt eerste gerichte notificaties uit over systemen waarop een kwetsbare PCS-versie actief is zonder de tijdelijke maatregel.|
 | 06-06-2021 | Tweede ronde notificaties verstuurd door DIVD CSIRT. |
-
+| 16-06-2021 | DIVD deelt data met het DTC zodat zij eigenaren van nog kwetsbare systemen kunnen benaderen. |
+| 15-07-2021 | DIVD deelt data over laatste nog kwetsbare systemen met een reseller van Pulse software in Nederland in de hoop dat zij nog een aantal achterblijvers kunnen bereiken. |
+| 01-08-2021 | Case gesloten. Na 4 notificatie pogingen via verschillende kanalen kunnen wij hier verder niet veel meer doen. |
 
 ## Dankwoord
 DIVD is Fox IT / NCC Group zeer dankbaar voor de hulp die ze hebben geboden bij de versiedetectie. Zonder hun hulp had DIVD voor (vele) tientallen systemen geen gerichte notificatie kunnen sturen.
@@ -85,6 +87,7 @@ DIVD is Fox IT / NCC Group zeer dankbaar voor de hulp die ze hebben geboden bij 
 [2] https://www.ncsc.nl/actueel/advisory?id=NCSC-2021-0345  
 [3] https://www.fireeye.com/blog/threat-research/2021/04/suspected-apt-actors-leverage-bypass-techniques-pulse-secure-zero-day.html  
 [4] https://research.nccgroup.com/2021/04/23/a-census-of-deployed-pulse-connect-secure-pcs-versions/  
+[5] https://us-cert.cisa.gov/ncas/current-activity/2021/07/21/malware-targeting-pulse-secure-devices
 
 <hr>
 
@@ -133,6 +136,9 @@ It is likely that a (limited) number of Netherlands-linked PCS systems were not 
 | 03-05-2021 | Pulse Secure (Ivanti) releases a new version of PCS to all PCS customers. |
 | 10-05-2021 | DIVD sends first notifications about systems that run a PCS system without the workaround present while running a PCS version that is vulnerable according to the vendor’s advisory.|
 | 06-06-2021 | Second round of notifications sent by DIVD CSIRT. |
+| 16-06-2021 | DIVD shares data with DTC so they can reach out to owners of systems that are still vulnerable. |
+| 15-07-2021 | DIVD shares data about the last few vulnerable systems with a reseller of Pulse software in the Netherlands, in the hope that they can reach a few of the people responsible. |
+| 01-08-2021 | Case closed. After 4 attempts to reach system owners via various channels we exhausted our means to remediate this further. |
 
 ## Acknowledgements
 DIVD is very grateful to Fox IT / NCC Group for their assistence in version detection. Withouth their help, DIVD could not have sent out targeted notifications..
@@ -143,3 +149,4 @@ DIVD is very grateful to Fox IT / NCC Group for their assistence in version dete
 [2] https://www.ncsc.nl/actueel/advisory?id=NCSC-2021-0345  
 [3] https://www.fireeye.com/blog/threat-research/2021/04/suspected-apt-actors-leverage-bypass-techniques-pulse-secure-zero-day.html  
 [4] https://research.nccgroup.com/2021/04/23/a-census-of-deployed-pulse-connect-secure-pcs-versions/  
+[5] https://us-cert.cisa.gov/ncas/current-activity/2021/07/21/malware-targeting-pulse-secure-devices
