--- a/csirt.divd.nl/_posts/20-01-13-Citrix.md
+++ b/csirt.divd.nl/_posts/20-01-13-Citrix.md
@@ -4,6 +4,9 @@ title: Wijd verspreide kwetsbaarheid in Citrix Gateway en Citrix Application Del
 author: Frank Breedijk
 excerpt: We scannen en notificeren voor een actief misbruikte kwetsbaarheid in Citrix ADC / We are scanning and notifying for  of Citrix ADC servers with an actively abused vulnerability
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 Het probleem
 ============
