--- a/csirt.divd.nl/_posts/20-03-12-smbv3.md
+++ b/csirt.divd.nl/_posts/20-03-12-smbv3.md
@@ -4,6 +4,9 @@ title: Ernstig ongepatched lek in SMB v3  / Critical unpatched vulnerability in 
 author: Frank Breedijk
 excerpt:  CVE-2020-0796 / ADV200005 SMB remote code execution vulnerability
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ### Nederlands
 
