--- a/csirt.divd.nl/cases/DIVD-2020-00001.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00001.md
@@ -21,6 +21,9 @@ patch_status:	Available
 recommendation: Don't use unpatched systems. Make sure systems are not compromised/backdoored before patching	
 workaround:		Available but not 100% effective		
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ### Update 9-3-2020 21:12
 
