--- a/csirt.divd.nl/cases/DIVD-2020-00002.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00002.md
@@ -21,6 +21,9 @@ versions:       n/a
 recommendation: Revoke and replace certificates (preferably for non-wildcard versions) unless you can reliably determine that the Citrix system wasn't compromised.
 -workaround:			
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ### Update 22-1-2020 21:20
 
