--- a/csirt.divd.nl/cases/DIVD-2020-00003.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00003.md
@@ -22,6 +22,9 @@ patch_status:	Available
 recommendation: Apply patches of Patch Tuesday January 2020
 workaround:		Superceeded by patches
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 | Our reference | {{ page.divd | divd }} |
 {% assign team = site.team | map: "name" -%}
