--- a/csirt.divd.nl/cases/DIVD-2020-00004.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00004.md
@@ -21,6 +21,9 @@ versions:       n/a
 recommendation: Make sure these systems are not accessible from the internet.	
 -workaround:			
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ## Samenvatting
 
