--- a/csirt.divd.nl/cases/DIVD-2020-00005.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00005.md
@@ -22,6 +22,9 @@ recommendation: 	Disable AJP if not used, make sure to install the update
 patch_status:	 	Available
 workaround:			Comment out the line, "Connector port="8009" protocol="AJP/1.3" redirectPort=8443"
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ## Samenvatting
 
