--- a/csirt.divd.nl/cases/DIVD-2020-00006.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00006.md
@@ -33,6 +33,9 @@ recommendation: 	Remove SMB services from the internet, block traffic from local
 patch_status:	 	Available
 workaround:			"For servers: Block port 445 or disable compression. <br> For clients: None"
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ## Update 12-3-2020
 
