--- a/csirt.divd.nl/cases/DIVD-2020-00007.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00007.md
@@ -24,6 +24,9 @@ recommendation: Run the mitigation tool as soon as possible on the storage zone 
 patch_status:	 	Available
 -workaround:		
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 | Important | If the storage zone was created on any of the affected versions, merely upgrading your software to a patched version will not resolve the vulnerability. |
 
