--- a/csirt.divd.nl/cases/DIVD-2020-00008.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00008.md
@@ -23,6 +23,9 @@ recommendation: Keep Wordpress and all installed plugins up-to-date.
 -patch_status:	 	Available
 -workaround:		
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ## Samenvatting
 Via [infooNL](https://www.infoo.nl) hebben wij een lijst ontvangen van ~313.000 .NL domeinnamen waar Wordpress op lijkt te staan. Onderzoekers van het DIVD zijn met deze dataset aan de slag gegaan en hebben al deze domeinen gescanned op onder andere het versienummer van Wordpress en welke plugins er aanwezig zijn. Aan de hand van deze scan resultaten zullen wij beginnen gevonden kwetsbaarheden bij de websites te melden.
