--- a/csirt.divd.nl/cases/DIVD-2020-00009.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00009.md
@@ -22,6 +22,9 @@ recommendation: If your organisation was affected by this data breach we recomme
 -patch_status:	 	Available
 -workaround:		
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ## Samenvatting
 4 augustus 2020 is een lijst van gebruikersnamen en IP adressen gelekt van meer dan 900 Pulse Secure VPN enterprise servers. De volgende data verschijnt in de gelekte dataset:
