--- a/csirt.divd.nl/cases/DIVD-2020-00010.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00010.md
@@ -22,6 +22,9 @@ recommendation: Upgrade to the latest wpDiscuz version and check system for comp
 patch_status:	 	Available
 -workaround:		
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ## Samenvatting
 Op 19 Juni is een kritieke kwetsbaarheid in de wpDiscuz plugin ontdekt en gemeld aan de ontwikkelaars van wpDiscuz. De ontwikkelaar hebben, te vergeefs, geprobeert deze kwetsbaaheid op te lossen versie 7.0.4 en uiteindelijk op 23 July 2020 opgelost in versie 7.0.5. Door een fout in de validatie van uploads van de gebruiker is het voor een gebruiker mogelijk PHP code uit te voeren als de server en hiermee de web server over te nemen.
