--- a/csirt.divd.nl/cases/DIVD-2020-00011.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00011.md
@@ -188,6 +188,9 @@ recommendation: "
 "
 -workaround:    
 ---
+<p>
+  <small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ## Samenvatting
 
