--- a/csirt.divd.nl/cases/DIVD-2020-00013.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00013.md
@@ -28,6 +28,9 @@ recommendation: "
 -patch_status:	 	Available
 -workaround:		
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ## Samenvatting
 
