--- a/csirt.divd.nl/cases/DIVD-2020-00014.md
+++ b/csirt.divd.nl/cases/DIVD-2020-00014.md
@@ -29,6 +29,9 @@ recommendation: "
 "
 -workaround:		
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ## Samenvatting
 Er is een nieuwe zero-day kwetsbaarheid gevonden in SolarWinds Orion, bekend als {% cve CVE-2020-10148 %}, met deze kwetsbaarheid kan een aanvaller zonder authenticatie API commando's uitvoeren en zo het systeem compromiteren.
