--- a/csirt.divd.nl/cases/DIVD-2021-00001.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00001.md
@@ -34,6 +34,9 @@ recommendation: "
 "
 -workaround:		
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ## Samenvatting
 Microsoft heeft meerdere 0-day exploits ontdekt die actief gebruikt worden om on-premises versies van Microsoft Exchange Server aan te vallen.
