--- a/csirt.divd.nl/cases/DIVD-2021-00005.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00005.md
@@ -30,6 +30,9 @@ The solution for these vulnerabilities is to upgrade the Pulse Connect Secure se
 -patch_status:	 	Available
 -workaround:		Available
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ## Samenvatting
 
