--- a/csirt.divd.nl/cases/DIVD-2021-00012.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00012.md
@@ -23,6 +23,9 @@ Change your passwords, check if credentials have been abused, check your compute
 -patch_status:	 	n/a
 -workaround:		Available
 ---
+<p>
+  <small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ## Samenvatting
 
