--- a/csirt.divd.nl/cases/DIVD-2021-00014.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00014.md
@@ -14,24 +14,31 @@ researchers:
 - Victor Gevers
 cves: n/a
 product: Kaseya Unitrends
-versions: < 10.5.2
+versions: 
+  - Server < 10.5.5-2
+  - Client, currently unpatched all versions likely vulnerable 
 recommendation: "
 Do not expose this service or the clients directly to the internet until Kaseya has patched these vulnerabilities.
 "
--patch_status:	 	n/a
--workaround:		Available
+patch_status:	 	"Server side vulnerabilities patched in v10.5.5-2, no patches available for the client"
+workaround:		Workaround available for the client, in Kaseya knowledge base
 ---
 
-
-### English
-
 ## Summary
-A DIVD researcher has identified several vulnerabilities in the [Kaseya Unitrends](https://www.unitrends.com/products/enterprise-backup-software) backup
-product version < 10.5.2.
+A DIVD researcher has identified three vulnerabilities in the [Kaseya Unitrends](https://www.unitrends.com/products/enterprise-backup-software) backup product.
+
+Server software prior to v10.5.5-2 is vulnerable to:
+* An authenticated remote code execution vulnerability, and
+* a privilege escaltion vulnerability from read-only user to admin 
+
+Client software (any version) is currently vulnerable to: 
+* a (yet) undisclosed vulnerability on the client
 
 
 ## What you can do
-Do not expose this service or the clients (running default on ports 80, 443, 1743, 1745) directly to the internet until Kaseya has patched these vulnerabilities.
+Patch server software to at least version 10.5.5-2 to remove these vulnerabilities. As per Kaseya's [firewall requirements](https://support.unitrends.com/hc/en-us/articles/360013264518) you are strongly advised not to expose this product to public internet.
+
+The client side vulnerability can current only be mitigated with firewall rules. Filter traffic to and from the client using the recommened mitigation from the [knowledge base article](https://support.unitrends.com/hc/en-us/articles/4404684084369-RCE-KB). 
  
 ## What we are doing
 The Dutch Institute for Vulnerability Disclosure (DIVD) performs a daily scan to detect vulnerable Kaseya Unitrends servers and notify the owners directly or via the known abuse channels, Gov-CERTs and CSIRTs, and other trusted channels.
@@ -44,3 +51,4 @@ The Dutch Institute for Vulnerability Disclosure (DIVD) performs a daily scan to
 | 03 July 2021 | Vendor informed. |
 | 14 July 2021 | Scanning internet-facing implementations. |
 | 15 July 2021 | Start of the identification of possible vulnerable internet-facing systems. |
+| 12 August 2021 | Patches relesed for the Unitrends server (v10.5.5-2) that address these vulnerabilities |
