--- a/csirt.divd.nl/cases/DIVD-2021-00004.md
+++ b/csirt.divd.nl/cases/DIVD-2021-00004.md
@@ -34,6 +34,9 @@ If you have been notified that your email address(es) and password(s) are on the
 -patch_status:	 	Available
 -workaround:		
 ---
+<p>
+	<small><a href='{{ page.url }}#english'>English below</a></small>
+</p>
 
 ## Samenvatting
 
